# traffic_classicial

./: .gitignore  README.md  pyproject.toml  附件6_西安电子科技大学大学生创新训练计划项目总结报告.md
configs/: pipeline.example.yaml  repro_csv.example.yaml  repro_pcap.example.yaml
docs/: analysis_notes.md  architecture.md  experiments.md
reports/: final_experiment_report.html  final_experiment_report.md  project_defense_presentation.html  project_ppt_qna.md  project_ppt_source_master.md  project_ppt_source_outline.md
results/: cic_extension_summary.csv  cic_extension_summary.md  ctu13_binary_benchmark.csv  ctu13_binary_benchmark.md  ctu13_candidate_region_proposal.md  ctu13_edge_centric_comparison.csv  ctu13_edge_centric_comparison.md  ctu13_episode_graph_benchmark.md  ctu13_episode_graph_construction.md  ctu13_episode_quality_diagnosis.md  ctu13_episode_sessionization.md  ctu13_flow_label_alignment_summary.csv  ctu13_flow_label_alignment_summary.md  ctu13_graph_extraction_modes.csv  ctu13_graph_extraction_modes.md  ctu13_micrograph_verifier.md  ctu13_nuisance_aware_benchmark.csv  ctu13_nuisance_aware_benchmark.md  ctu13_nuisance_aware_diagnosis.md  ctu13_primary_graph_extraction_summary.csv  ctu13_primary_graph_extraction_summary.md  ctu13_proposal_quality_diagnosis.md  ctu13_s52_coverage_diagnosis.csv  ctu13_s52_coverage_diagnosis.md  data_integrity_check.md  flow_feature_distribution_probe.md  flow_feature_distribution_probe_stage2.csv  flow_feature_distribution_probe_stage2.md  sampling_bias_check.csv  temporal_edge_distribution_probe.csv  temporal_edge_distribution_probe.md  (+4 more)
(+166 files in other folders)
