[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-graph-unsupervised"
version = "0.1.0"
description = "Skeleton repository for unsupervised malicious traffic detection based on flow interaction graphs."
requires-python = ">=3.10"
dependencies = [
  "pytest>=8.0",
  "ruff>=0.4.0",
  "black>=24.0.0",
  "networkx>=3.2",
  "pyyaml>=6.0",
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
gae = [
  "torch>=2.1",
]

[project.scripts]
traffic-graph-pipeline = "traffic_graph.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
